# geolabel-mcp

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  glama.json  pyproject.toml  server.json
.github/workflows/: tests.yml
geolabel_mcp/: __init__.py  _client.py  _metrics.py  server.py
tests/: conftest.py  test_cache.py  test_client_lifecycle.py  test_config.py  test_get_location_label.py  test_mcp_registration.py  test_rounding.py  test_security.py  test_stats.py  test_validation.py
