[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "geolabel-mcp"
version = "0.1.1"
description = "MCP server for GeoLabel — GPS coordinates to AI-ready location context"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
keywords = ["mcp", "location", "gps", "openstreetmap", "claude", "ai", "automation", "shortcuts"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: GIS",
]
dependencies = [
    "mcp[cli]>=1.0.0",
    "httpx>=0.27.0",
]

[project.urls]
Homepage = "https://geolabel.dev"
Documentation = "https://geolabel.dev/quickstart.html"
"Bug Tracker" = "https://github.com/TylerCoxDruin/geolabel/issues"
Repository = "https://github.com/TylerCoxDruin/geolabel"

[project.scripts]
geolabel-mcp = "geolabel_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["geolabel_mcp"]
