[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "geolabel-mcp"
version = "0.1.1"
description = "MCP server for GeoLabel — GPS coordinates to AI-ready location context"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.10"
keywords = ["mcp", "location", "gps", "openstreetmap", "claude", "ai", "automation", "shortcuts"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: GIS",
]
dependencies = [
    "mcp[cli]>=1.0.0",
    "httpx[http2]>=0.27.0",
    "typing_extensions>=4.7",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
    "coverage[toml]>=7.4",
]
dev = [
    "ruff>=0.5",
    "mypy>=1.10",
]

[project.urls]
Homepage = "https://geolabel.dev"
Documentation = "https://geolabel.dev/quickstart.html"
"Bug Tracker" = "https://github.com/TylerCoxDruin/geolabel/issues"
Repository = "https://github.com/TylerCoxDruin/geolabel"

[project.scripts]
geolabel-mcp = "geolabel_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["geolabel_mcp"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.coverage.run]
source = ["geolabel_mcp"]
branch = true

[tool.coverage.report]
show_missing = true
fail_under = 90
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "SIM", # flake8-simplify
    "RUF", # ruff-specific
]

[tool.mypy]
python_version = "3.10"
files = ["geolabel_mcp"]
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
no_implicit_optional = true

[[tool.mypy.overrides]]
module = ["mcp.*"]
ignore_missing_imports = true
